# globalsearch-rs

./: Cargo.toml  README.md  build.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: coverage.yml  globalsearch-rs CI.yml  globalsearch-rs-CI.yml  maturin-ci.yml  paper-pdf.yml  pyglobalsearch-ci.yml
benches/: batch_iterations.rs  parallel_performance.rs  scatter_search.rs  six_hump_camel.rs
examples/: 1d-griewank.rs  3d-ackley.rs  basic_tutorial.rs  catalytic_cracking.rs  checkpointing_example.rs  checkpointing_population_size_expansion.rs  constrained_optimization.rs  cross_in_tray.rs  extended_checkpointing.rs  sixhumpcamel-cobyla.rs  sixhumpcamel-newtonCG.rs  sixhumpcamel-trustregion.rs  sixhumpcamel.rs
paper/: paper.bib  paper.md
python/: Cargo.toml  README.md  pyglobalsearch.pyi  pyproject.toml
python/docs/: api.rst  conf.py  index.rst
python/examples/: builders.py  constrained_optimization.py  levy_5d_jax.py  sixhumpcamel-cobyla.py  sixhumpcamel.py
python/src/: builders.rs  lib.rs  observers.rs
python/tests/: test_advanced_features.py  test_basic_optimization.py  test_bounds_filtering.py  test_builders.py  test_constraints.py  test_error_handling.py  test_local_solvers.py  test_many_constraints.py  test_observers.py  test_parameters.py  test_pyglobalsearch.py
src/: checkpoint.rs  filters.rs  lib.rs  local_solver.rs  oqnlp.rs  problem.rs  scatter_search.rs  types.rs
src/local_solver/: builders.rs  mod.rs  runner.rs
src/observers/: mod.rs  stage1.rs  stage2.rs
