[package]
name = "globalsearch-rs"
version = "0.1.0"
edition = "2021"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
license = "MIT"
description = "Global optimization with scatter search and local NLP solvers written in Rust using argmin"
readme = "README.md"
repository = "https://github.com/GermanHeim/globalsearch-rs"
keywords = ["optimization", "math", "science"]
categories = ["science", "mathematics"]
exclude = []
build = "build.rs"

[dependencies]
argmin = { version = "*" }
argmin-math = { version = "*", features = ["ndarray_latest-nolinalg"] }
argmin-observer-slog = { version = "*" }
argmin_testfunctions = { version = "*" }
ndarray = "0.15.6"
rayon = { version = "1.5.3", optional = true }
anyhow = "1.0.71"
rand = "0.9.0"

[features]
default = []
rayon = ["dep:rayon"]

[dev-dependencies]
criterion = { git = "https://github.com/bheisler/criterion.rs", features = [
    "html_reports",
] }

[[bench]]
name = "six_hump_camel"
harness = false
