[package]
name = "globalsearch"
version = "0.2.0"
edition = "2021"
authors = ["Germán Martín Heim <german.martin.heim@gmail.com>"]
license = "MIT"
description = "Global optimization with scatter search and local NLP solvers written in Rust using argmin"
readme = "README.md"
repository = "https://github.com/GermanHeim/globalsearch-rs"
keywords = ["optimization", "math", "science"]
categories = ["science", "mathematics"]
exclude = ["/media", ".github", "/python"]
build = "build.rs"
rust-version = "1.78"                                                                                      # MSRV

[dependencies]
argmin = { version = "0.10.0" }
argmin-math = { version = "0.4.0", features = ["ndarray_latest-nolinalg"] }
ndarray = "0.15.6"
rayon = { version = "1.5.3", optional = true }
thiserror = "2.0.11"
rand = "0.9.0"
kdam = { version = "0.6.2", optional = true }

[features]
default = []
rayon = ["dep:rayon"]
progress_bar = ["dep:kdam"]

[dev-dependencies]
criterion = { git = "https://github.com/bheisler/criterion.rs", features = [
    "html_reports",
] }

[[bench]]
name = "six_hump_camel"
harness = false
